resolves color contrast errors in Wave

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -92,7 +92,7 @@ $color-yellow: #cc6700;
 
 // CU Brand Colors
 $color-chapman-red: #a50034;
-$color-chapman-blue: #407892;
+$color-chapman-blue: #294d5e;
 $color-chapman-gray: #dad8cf;
 
 
