--- a/app/assets/stylesheets/components/section_message.scss
+++ b/app/assets/stylesheets/components/section_message.scss
@@ -9,7 +9,7 @@
   .category {
     @include content_label();
     margin: 0;
-    background-color: red !important;
+    color: $color-medium-gray;
   }
 
   .title {
